--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,8 +33,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.indoorly"
-        minSdkVersion 21
+        applicationId "com.saverl.indoorly"
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -57,6 +57,8 @@ flutter {
 dependencies {
     implementation project(':unity-classes') // the unity classes module you added from step 1
     testImplementation 'junit:junit:4.12'
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
+apply plugin: 'com.google.gms.google-services'
