--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: indoorly
 description: A new Flutter project.
 
-version: 1.0.0+1
+version: 2.0.0
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -13,12 +13,13 @@ dependencies:
   cloud_firestore: ^0.12.11
   google_sign_in: ^4.0.7
   firebase_auth: ^0.15.1
-  permission_handler: ^4.0.0
-  shared_preferences: ^0.5.4+8
+  # permission_handler: ^4.0.0
+  # shared_preferences: ^0.5.4+8
   google_fonts: ^0.1.1
   flutter_spinkit: ^4.1.0
   font_awesome_flutter: ^8.5.0
   provider: ^3.2.0
+  rubber: ^0.4.0
 
   cupertino_icons: ^0.1.2
 
