--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: indoorly
 description: A new Flutter project.
 
-version: 2.0.0
+version: 5.2.1+12
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -13,7 +13,7 @@ dependencies:
   cloud_firestore: ^0.12.11
   google_sign_in: ^4.0.7
   firebase_auth: ^0.15.1
-  # permission_handler: ^4.0.0
+  flare_flutter: ^1.8.3
   # shared_preferences: ^0.5.4+8
   google_fonts: ^0.1.1
   flutter_spinkit: ^4.1.0
@@ -38,3 +38,4 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/flare/
