--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   provider: ^3.2.0
   rubber: ^0.4.0
   flutter_blue: ^0.6.3+1
+  permission_handler: ^4.1.0
   # !----------------! #
   cached_network_image: ^2.0.0
   smooth_star_rating: ^1.0.3
@@ -47,3 +48,4 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/flare/
+    - assets/maps/
